<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/my_products"
        android:title="@string/my_products"/>
    <item
        android:id="@+id/nav_business"
        android:icon="@drawable/business"
        android:title="@string/business_type" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/categories"
        android:title="@string/categories"  />
    <!--<item-->
    <!--android:id="@+id/nav_login"-->
    <!--android:icon="@drawable/ic_login"-->
    <!--android:title="@string/log_in"/>-->

    <item android:title="@string/other">
        <menu>

            <!--<item-->
                <!--android:id="@+id/nav_manage"-->
                <!--android:icon="@drawable/ic_menu_manage"-->
                <!--android:title="@string/language_settings" />-->
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_info"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>
</menu>