<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    android:clipToPadding="false"
    tools:context=".ui.LanguageActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textSize="18sp"
            android:padding="8dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nr"
            android:textSize="18sp"
            android:padding="8dp"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sn"
            android:textSize="18sp"
            android:padding="8dp"
            android:checked="false"/>
    </RadioGroup>
</android.support.design.card.MaterialCardView>